# Telegram-Solana-bot

./: .env  Cargo.toml
.cargo/: config.toml
src/: main.rs
