[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

 [dependencies]
dotenv = "0.15.0"
image = "0.25" 
image-webp = "0.2"
log = "0.4.22"
pretty_env_logger = "0.5.0"
qrcode = "0.14.1"
rand = "0.8"
rayon = "1.10.0"
solana-client = "2.0.14"
solana-sdk = "2.0.13"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
 rand_core = "0.6"
rand_chacha = { version = "0.3", features = ["std"] }
